--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   "dependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^5.3.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.2",
+    "mongoose": "^5.10.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
