--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "googleapis": "^60.0.1",
+    "jwt-decode": "^3.0.0",
     "mongoose": "^5.10.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
