--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "A simple app for tracking plants",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production nodemon server/server.js",
-    "build": "NODE_ENV=production webpack",
-    "dev": "concurrently \"NODE_ENV=development\" \"webpack-dev-server --open --hot\" \"nodemon server/server.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "NODE_ENV=production webpack & NODE_ENV=production nodemon server/server.js",
+    "start": "NODE_ENV=development webpack-dev-server --open --hot & NODE_ENV=development nodemon server/server.js"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +20,9 @@
     "jwt-decode": "^3.0.0",
     "mongoose": "^5.10.5",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "style-loader": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.5",
@@ -31,7 +31,9 @@
     "babel-loader": "^8.1.0",
     "html-webpack-plugin": "^4.4.1",
     "nodemon": "^2.0.4",
-    "webpack": "^4.44.1",
+    "sass": "^1.27.0",
+    "sass-loader": "^10.0.2",
+    "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
