--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^5.3.0",
     "cookie-parser": "^1.4.5",
+    "css-loader": "^5.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "googleapis": "^60.0.1",
